map had been moved to the app.js file only to realize that z-index would not work correctly. CSS does not seem to offer a solution for the desired effect in all browsers, so I have opted to detect edge in js and conditionally style the map there

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -704,18 +704,15 @@ body {
       border: 1px solid #76FF03; }
 
 .contact-map {
-  position: relative;
-  top: -15rem;
-  left: -2.5rem;
   height: 140vh;
   width: 100vw;
   border: none;
   opacity: 0.3; }
   .contact-map__container {
     position: absolute;
-    top: -5rem;
+    top: -15rem;
     left: -2.5rem;
-    height: 100vh;
+    height: calc(100vh + 10rem);
     width: 100vw;
     overflow: hidden; }
     @media (max-width: 56.25em) {
